--- a/webpages/club.html
+++ b/webpages/club.html
@@ -28,15 +28,15 @@
     </section>
     <section class="cal">
         <h2>Cyber Security Club</h2>
-        <p><a href="https://sites.google.com/charusat.ac.in/cspitce/club-chapters/cyber-security-club" class="round"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a> Cyber Security CLub</p>
+        <p><a href="https://sites.google.com/charusat.ac.in/cspitce/club-chapters/cyber-security-club" class="round"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a> Cyber Security Club</p>
     </section>
     <section class="cal">
         <h2>Networking Club</h2>
-        <p><a href="https://sites.google.com/charusat.ac.in/cspitce/club-chapters/networking-club" class="round"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a> Networking CLub</p>
+        <p><a href="https://sites.google.com/charusat.ac.in/cspitce/club-chapters/networking-club" class="round"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a> Networking Club</p>
     </section>
     <section class="cal">
         <h2>Cultural Club</h2>
-        <p><a href="https://sites.google.com/charusat.ac.in/cspitce/club-chapters/cultural-club" class="round"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a> Cultural CLub</p>
+        <p><a href="https://sites.google.com/charusat.ac.in/cspitce/club-chapters/cultural-club" class="round"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a> Cultural Club</p>
     </section>
     <section class="gdsc">
         <h2>Google Developer Student Club</h2>
@@ -44,8 +44,8 @@
         <p>GDSC</p>
     </section>
     <section class="cal">
-        <h2>Depstar Codeing Club</h2>
-        <p><a href="https://www.charusat.ac.in/depstar/ce/index.php?v=DCC" class="round"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a> Coding Club CLub</p>
+        <h2>Depstar Coding Club</h2>
+        <p><a href="https://www.charusat.ac.in/depstar/ce/index.php?v=DCC" class="round"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a> Coding Club</p>
     </section>
     <section class="evs">
         <h2>Team Environment</h2><img src="C:\Users\dell\Downloads\webpages\charusat\Screenshot 2022-10-02 133248.png">
@@ -59,7 +59,7 @@
     <!--footer-->
     <section class="footer">
         <h3>ABOUT US</h3>
-        <p><h4>Address</h4><br>Charotar University of Science & Technology<br>CHARUSAT Campus<br>Off. Nadiad-Petlad Highway, Changa 388 421<br>Anand, Gujarat, INDIA</p>
+        <p><h4>Address</h4><br>Charotar University of Science & Technology<br>CHARUSAT Campus<br>Off. Nadiad-Petlad Highway, Changa 388 421.<br>Anand, Gujarat, INDIA.</p>
         <p>Telephone :: 02697-265011<br>Email :: info@charusat.ac.in</p>
         <div class="icons">
             <a href="https://www.facebook.com/thecharusat"><i class="fa fa-facebook"></i></a>
