--- a/webpages/index.html
+++ b/webpages/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="Academics.html">ACADEMICS</a></li>
-                    <li><a href="student.html">STUDENTS CORNER</a></li>
+                    <li><a href="student.html">STUDENT'S CORNER</a></li>
                     <li><a href="club.html">CLUB</a></li>
                     <li><a href="Q.html">Q?</a></li>
                 </ul>
@@ -29,6 +29,7 @@
         </nav>
         <div class="text-box">
             <h1>NAAC <font color=#f44336>A+</font> GRADED<br><font color=#00bfff>CHARUSAT UNIVERSITY</font></h1>
+            <p><font color=#62bd69 size="4px">Charotar University of Science and Technology</font></p>
             <p>CHARUSAT fosters an aspiration of being a World Class University.<br> It strives, initially, to be in the league of Top 20 Universities at National Level.</p>
             <a href="" class="hero-btn">Visit Us To Know More</a>
         </div>
@@ -100,7 +101,7 @@
     <!--footer-->
     <section class="footer">
         <h3>ABOUT US</h3>
-        <p><h4>Address</h4><br>Charotar University of Science & Technology<br>CHARUSAT Campus<br>Off. Nadiad-Petlad Highway, Changa 388 421<br>Anand, Gujarat, INDIA</p>
+        <p><h4>Address</h4><br>Charotar University of Science & Technology<br>CHARUSAT Campus<br>Off. Nadiad-Petlad Highway, Changa 388 421.<br>Anand, Gujarat, INDIA.</p>
         <p>Telephone :: 02697-265011<br>Email :: info@charusat.ac.in</p>
         <div class="icons">
             <a href="https://www.facebook.com/thecharusat"><i class="fa fa-facebook"></i></a>
