--- a/webpages/student.html
+++ b/webpages/student.html
@@ -94,7 +94,7 @@
 <!--footer-->
 <section class="footer">
     <h3>ABOUT US</h3>
-    <p><h4>Address</h4><br>Charotar University of Science & Technology<br>CHARUSAT Campus<br>Off. Nadiad-Petlad Highway, Changa 388 421<br>Anand, Gujarat, INDIA</p>
+    <p><h4>Address</h4><br>Charotar University of Science & Technology<br>CHARUSAT Campus<br>Off. Nadiad-Petlad Highway, Changa 388 421.<br>Anand, Gujarat, INDIA.</p>
     <p>Telephone :: 02697-265011<br>Email :: info@charusat.ac.in</p>
     <div class="icons">
         <a href="https://www.facebook.com/thecharusat"><i class="fa fa-facebook"></i></a>
