--- a/webpages/depstar.html
+++ b/webpages/depstar.html
@@ -122,7 +122,7 @@
     <!--footer-->
     <section class="footer">
         <h3>ABOUT US</h3>
-        <p><h4>Address</h4><br>Charotar University of Science & Technology<br>CHARUSAT Campus<br>Off. Nadiad-Petlad Highway, Changa 388 421<br>Anand, Gujarat, INDIA</p>
+        <p><h4>Address</h4><br>Charotar University of Science & Technology<br>CHARUSAT Campus<br>Off. Nadiad-Petlad Highway, Changa 388 421.<br>Anand, Gujarat, INDIA.</p>
         <p>Phone :: +91-2697-265112<br>Email :: principal.cspit@charusat.ac.in</p>
         <div class="icons">
             <a href="https://www.facebook.com/thecharusat"><i class="fa fa-facebook"></i></a>
