--- a/webpages/CSPIT.html
+++ b/webpages/CSPIT.html
@@ -31,7 +31,7 @@
     <section class="lab">
         <div class="rows">
             <div class="lab-col">
-                <img src="C:\Users\dell\OneDrive\Pictures\Screenshots\Screenshot (202).png">
+                <img src="charusat\image (1).png">
             </div>
         </div>
     </section>
@@ -40,53 +40,37 @@
         <div class="rows">
             <div class="fac-col">
                 <img src="https://charusat.ac.in/cspit/ce/img/faculties/1.jpg"/>
-                <div class="laayer">
-                    <h3>H.O.D.<br>Dr. Ritesh<br>Patel</h3>
-                </div>
+                <h3>H.O.D.<br>Dr. Ritesh<br>Patel</h3>
             </div>
             <div class="fac-col">
                 <img src="https://charusat.ac.in/cspit/ce/img/faculties/19.jpg"/>
-                <div class="laayer">
-                    <h3>Prof. Aayushi<br>Chaudhari</h3>
-                </div>
+                <h3>Prof. Aayushi<br>Chaudhari</h3>
             </div>
             <div class="fac-col">
                 <img src=https://charusat.ac.in/cspit/ce/img/faculties/12.jpg>
-                <div class="laayer">
-                    <h3>Prof. Mayuri<br>Popat</h3>
-                </div>
+                <h3>Prof. Mayuri<br>Popat</h3>
             </div>
             <div class="fac-col">
                 <img src=https://charusat.ac.in/pdpias/maths-dept/img/maths/faculties/Dr.%20Yogeswari%20Patel.jpg>
-                <div class="laayer">
-                    <h3>Dr. Yogeshwari<br>Patel</h3>
-                </div>
+                <h3>Dr. Yogeshwari<br>Patel</h3>
             </div>
         </div>
         <div class="rows">
             <div class="fac-col">
                 <img src="https://charusat.ac.in/cspit/ee/img/faculties/12.jpg">
-                <div class="laayer">
-                    <h3>Dr. Dharmesh<br>Dabhi</h3>
-                </div>
+                <h3>Dr. Dharmesh<br>Dabhi</h3>
             </div>
             <div class="fac-col">
                 <img src="https://charusat.ac.in/pdpias/maths-dept/img/maths/faculties/Dr.%20Manoj%20Prajapati.jpg">
-                <div class="laayer">
-                    <h3>Dr. Manoj<br>Prajapati</h3>
-                </div>
+                <h3>Dr. Manoj<br>Prajapati</h3>
             </div>
             <div class="fac-col">
                 <img src=https://charusat.ac.in/cspit/ce/img/faculties/27.jpg>
-                <div class="laayer">
-                    <h3>Prof. Bhupendra<br>Patel</h3>
-                </div>
+                <h3>Prof. Bhupendra<br>Patel</h3>
             </div>
             <div class="fac-col">
                 <img src=https://charusat.ac.in/pdpias/physics/img/faculties/Pratik_Pataniya.png>
-                <div class="laayer">
-                    <h3>Dr. Pratik<br>Pataniya</h3>
-                </div>
+                <h3>Dr. Pratik<br>Pataniya</h3>
             </div>
         </div>
     </section>
@@ -101,12 +85,12 @@
     <!--Study Material-->
     <section class="cal">
         <h2>Study Material</h2>
-        <p><br><a href="https://drive.google.com/drive/folders/1hkUFeRVM60dwdaWeV41krMSBxin_N8TP" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> C Language</p>
-        <p><br><a href="https://drive.google.com/drive/folders/1qBHkEeg6zGdC359zgOO2phtGYdfYB1pr" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Basic of Electrical and Electronics Engineering(BEEE)</p>
-        <p><br><a href="https://drive.google.com/drive/folders/155r4mg-_Z1zHTZvzGXMa0jtHq_Fk5ecD" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Maths</p>
-        <p><br><a href="https://drive.google.com/drive/folders/1H-KMrzyUVEjp9w1DtPgDRWpCV670Mw1Z" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> English</p>
-        <p><br><a href="https://drive.google.com/drive/folders/1do6QsAZIdLidbxCf_oNY9uTkLi6k9Wlh" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> ME</p>
-        <p><br><a href="https://drive.google.com/drive/folders/1K70KpZ7rktDIh6pC7xb0vr2jniQcKGOm" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Object Oriented Programming(C++)</p>
+        <p><br><a href="https://drive.google.com/drive/folders/1hkUFeRVM60dwdaWeV41krMSBxin_N8TP?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> C Language</p>
+        <p><br><a href="https://drive.google.com/drive/folders/1qBHkEeg6zGdC359zgOO2phtGYdfYB1pr?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Basic of Electrical and Electronics Engineering(BEEE)</p>
+        <p><br><a href="https://drive.google.com/drive/folders/155r4mg-_Z1zHTZvzGXMa0jtHq_Fk5ecD?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Maths</p>
+        <p><br><a href="https://drive.google.com/drive/folders/1H-KMrzyUVEjp9w1DtPgDRWpCV670Mw1Z?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> English</p>
+        <p><br><a href="https://drive.google.com/drive/folders/1do6QsAZIdLidbxCf_oNY9uTkLi6k9Wlh?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> ME</p>
+        <p><br><a href="https://drive.google.com/drive/folders/1K70KpZ7rktDIh6pC7xb0vr2jniQcKGOm?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Object Oriented Programming(C++)</p>
     </section>
     <!--About US-->
     <section class="cta">
