--- a/webpages/club.html
+++ b/webpages/club.html
@@ -48,7 +48,7 @@
         <p><a href="https://www.charusat.ac.in/depstar/ce/index.php?v=DCC" class="round"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a> Coding Club</p>
     </section>
     <section class="evs">
-        <h2>Team Environment</h2><img src="C:\Users\dell\Downloads\webpages\charusat\Screenshot 2022-10-02 133248.png">
+        <h2>Team Environment</h2>
         <p><a href="https://www.instagram.com/team_env_charusat/"><i class="fa fa-instagram"></i></a><br>Het Soni(21CS068)<a href="21CS068@charusat.edu.in"><br>21CS068@charusat.edu.in</a><br>Jainam Mehata(20CS035)<br><a href="21CS068@charusat.edu.in">21CS035@charusat.edu.in</a></p>
     </section>
     <!--About US-->
