--- a/webpages/depstar.html
+++ b/webpages/depstar.html
@@ -46,53 +46,37 @@
         <div class="rows">
             <div class="fac-col">
                 <img src="https://www.charusat.ac.in/depstar/ce/img/faculties/2.png"/>
-                <div class="laayer">
-                    <h3>H.O.D.<br>Dr. Dweepna<br>Garg</h3>
-                </div>
+                <h3>H.O.D.<br>Dr. Dweepna<br>Garg</h3>
             </div>
             <div class="fac-col">
                 <img src="https://www.charusat.ac.in/depstar/ce/img/faculties/6.png"/>
-                <div class="laayer">
-                    <h3>Prof. Khushi<br>Patel</h3>
-                </div>
+                <h3>Prof. Khushi<br>Patel</h3>
             </div>
             <div class="fac-col">
                 <img src=https://www.charusat.ac.in/depstar/ce/img/faculties/7.png>
-                <div class="laayer">
-                    <h3>Prof. Shraddha<br>Vyas</h3>
-                </div>
+                <h3>Prof. Shraddha<br>Vyas</h3>
             </div>
             <div class="fac-col">
                 <img src=https://charusat.ac.in/pdpias/maths-dept/img/maths/faculties/Dr.%20Bina%20Patel.jpg>
-                <div class="laayer">
-                    <h3>Dr. Bina<br>Patel</h3>
-                </div>
+                <h3>Dr. Bina<br>Patel</h3>
             </div>
         </div>
         <div class="rows">
             <div class="fac-col">
                 <img src="https://charusat.ac.in/pdpias/maths-dept/img/maths/faculties/Dr.%20Manoj%20Prajapati.jpg">
-                <div class="laayer">
-                    <h3>Dr. Manoj<br>Prajapati</h3>
-                </div>
+                <h3>Dr. Manoj<br>Prajapati</h3>
             </div>
             <div class="fac-col">
                 <img src=https://charusat.ac.in/pdpias/physics/img/faculties/Shivam_Patel.png>
-                <div class="laayer">
-                    <h3>Dr. Shivam<br>Patel</h3>
-                </div>
+                <h3>Dr. Shivam<br>Patel</h3>
             </div>
             <div class="fac-col">
                 <img src="https://charusat.ac.in/cspit/ee/img/faculties/7.jpg">
-                <div class="laayer">
-                    <h3>Prof. Jivandhar<br>Joshi</h3>
-                </div>
+                <h3>Prof. Jivandhar<br>Joshi</h3>
             </div>
             <div class="fac-col">
                 <img src=https://charusat.ac.in/cspit/ee/img/faculties/13.jpg>
-                <div class="laayer">
-                    <h3>Prof. Mihir<br>Patel</h3>
-                </div>
+                <h3>Prof. Mihir<br>Patel</h3>
             </div>
         </div>
     </section>
@@ -107,12 +91,12 @@
     <!--Study Material-->
     <section class="cal">
         <h2>Study Material</h2>
-        <p><br><a href="https://drive.google.com/drive/folders/1hkUFeRVM60dwdaWeV41krMSBxin_N8TP" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> C Language</p>
-        <p><br><a href="https://drive.google.com/drive/folders/1qBHkEeg6zGdC359zgOO2phtGYdfYB1pr" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Basic of Electrical and Electronics Engineering(BEEE)</p>
-        <p><br><a href="https://drive.google.com/drive/folders/155r4mg-_Z1zHTZvzGXMa0jtHq_Fk5ecD" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Maths</p>
-        <p><br><a href="https://drive.google.com/drive/folders/1H-KMrzyUVEjp9w1DtPgDRWpCV670Mw1Z" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> English</p>
-        <p><br><a href="https://drive.google.com/drive/folders/1do6QsAZIdLidbxCf_oNY9uTkLi6k9Wlh" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> ME</p>
-        <p><br><a href="https://drive.google.com/drive/folders/1K70KpZ7rktDIh6pC7xb0vr2jniQcKGOm" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Object Oriented Programming(C++)</p>
+        <p><br><a href="https://drive.google.com/drive/folders/1hkUFeRVM60dwdaWeV41krMSBxin_N8TP?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> C Language</p>
+        <p><br><a href="https://drive.google.com/drive/folders/1qBHkEeg6zGdC359zgOO2phtGYdfYB1pr?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Basic of Electrical and Electronics Engineering(BEEE)</p>
+        <p><br><a href="https://drive.google.com/drive/folders/155r4mg-_Z1zHTZvzGXMa0jtHq_Fk5ecD?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Maths</p>
+        <p><br><a href="https://drive.google.com/drive/folders/1H-KMrzyUVEjp9w1DtPgDRWpCV670Mw1Z?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> English</p>
+        <p><br><a href="https://drive.google.com/drive/folders/1do6QsAZIdLidbxCf_oNY9uTkLi6k9Wlh?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> ME</p>
+        <p><br><a href="https://drive.google.com/drive/folders/1K70KpZ7rktDIh6pC7xb0vr2jniQcKGOm?usp=sharing" class="round"><i class="fa fa-book" aria-hidden="true"></i></a> Object Oriented Programming(C++)</p>
     </section>
     <!--About US-->
     <section class="cta">
