--- a/webpages/index.html
+++ b/webpages/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <meta name="viewport" content="with=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charusat University</title>
     <!--CSS Link-->
     <link rel="stylesheet" href="style.css">
@@ -31,7 +31,7 @@
             <h1>NAAC <font color=#f44336>A+</font> GRADED<br><font color=#00bfff>CHARUSAT UNIVERSITY</font></h1>
             <p><font color=#62bd69 size="4px">Charotar University of Science and Technology</font></p>
             <p>CHARUSAT fosters an aspiration of being a World Class University.<br> It strives, initially, to be in the league of Top 20 Universities at National Level.</p>
-            <a href="" class="hero-btn">Visit Us To Know More</a>
+            <a href="https://www.charusat.ac.in/" class="hero-btn">To Know More Visit Official Site</a>
         </div>
     </section>
     <!--academics-->
@@ -108,6 +108,9 @@
             <a href="https://twitter.com/thecharusat"><i class="fa fa-twitter"></i></a>
             <a href="https://www.instagram.com/thecharusat/?hl=en"><i class="fa fa-instagram"></i></a>
             <a href="https://www.linkedin.com/school/charotar-university-of-science-&-technology-charusat-/"><i class="fa fa-linkedin"></i></a>
+            <p>This page has<h5 id ="count"><!-- hitwebcounter Code START -->
+                <a href="https://www.hitwebcounter.com" target="_blank">
+                <img src="https://hitwebcounter.com/counter/counter.php?page=8053360&style=0003&nbdigits=5&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>    </h5> view</p>
         </div>
     </section>
     <!--JAVA SCRIPT for menu bar-->
